--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onOperator"
             android:text="/"
             />
     </LinearLayout>
@@ -100,6 +101,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onOperator"
             android:text="X"
             />
     </LinearLayout>
@@ -143,6 +145,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onOperator"
             android:text="-"
             />
     </LinearLayout>
@@ -155,10 +158,20 @@
         >
         <Button
             android:layout_margin="2dp"
+            android:id="@+id/btnDot"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="."
+            android:onClick="onDecimalPoint"
+            />
+
+        <Button
+            android:layout_margin="2dp"
             android:id="@+id/btnZero"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:text="0"
             android:onClick="onDigit"
             />
@@ -178,9 +191,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onOperator"
             android:text="+"
-
-
             />
     </LinearLayout>
 
@@ -197,7 +209,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="="
-            android:onClick="onDigit"
+            android:onClick="onEqual"
             />
 
     </LinearLayout>
